fix nav hover on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -542,4 +542,10 @@ svg {
 	.button-1 {
 		color: #78ced6;
 	}
+
+	.icon-text {
+		transform: scale(0);
+		top: -30px;
+		left: -10px;
+	}
 }
